# mirrorbrain

./: .git-blame-ignore-revs  .gitignore  ABOUT  BUGS  COPYING  FAQ  INSTALL  INSTALL.gentoo  Makefile  NEWS  README  README.md  THANKS  TODO  meson.build  meson_options.txt  mod_dbd.conf
.circleci/: config.yml
branches/experimental-duptree/: TODO
branches/openSUSE-buildservice/: README  mod_stats.c
config/: mirrors.asia.ini  mirrors.europe.ini  parse_config.pl
doc/: opensuse-redirector.sql
docs/: bugs.rst  changes.rst  conf.py  configuration.rst  configuration_reference.rst  developer.rst  index.rst  intro.rst  mirrors.rst  platforms.rst  tuning.rst  upgrading.rst  usecases.rst
docs/devel/: developer.rst  index.rst
docs/installation/: debian.rst  gentoo.rst  index.rst  initial_config.rst  memcache.rst  mod_asn.rst  opensuse.rst  prerequirements.rst  source.rst
mb/: Makefile  mb.py  meson.build  requirements.txt  setup.py  zsyncmodule.c
mb/mb/: __init__.py  appinfo.py  asn.py  conf.py  conn.py  core.py  crawl.py  dbmaint.py  exports.py  filelist.py  files.py  geoip.py  hashes.py  mberr.py  mirrorlists.py  randomfile.py  testmirror.py  timestamps.py  util.py
mb/mb/crawlers/: ftp.py  http.py  rsync.py
mb/scripts/: mb  mirrorprobe
mb/tests/: conf_tests.py  hashes_tests.py
mb/tests/data/: file1M
mirrordoctor/: mirrordoctor.py  setup.py
mirrordoctor/mb/: asn.py  conf.py  conn.py  core.py  countries.py  crawl.py  dbmaint.py  exports.py  files.py  geoip.py  hashes.py  mberr.py  mirrorlists.py  testmirror.py  util.py  vacuum.py
mirrorprobe/: mirrorprobe.py
mod_autoindex_mb/: INSTALL  meson.build  mod_autoindex.c.patch  mod_autoindex_mb.c
mod_mirrorbrain/: meson.build  mod_dbd.conf  mod_mirrorbrain.c  mod_mirrorbrain.conf
mod_stats/: README  TODO  mod_stats.c  mod_stats.conf
mod_stats/downloadstats/: settings.py.dist  urls.py
mod_stats/tools/: dlcount.py  ooo.conf  tdf.conf  xbmc.conf
mod_zrkadlo/: mod_dbd.conf  mod_zrkadlo.c  mod_zrkadlo.conf
pingd/: README.txt  ping.pl  pingd.py
redirector/: BUGS  README.txt  TODO  mod_zrkadlo.c  mod_zrkadlo.conf
scanner/: README.txt  parallel_test.pl  scanner.pl
sql/: initialdata-mysql.sql  initialdata-postgresql.sql  mirrorbrain-mysql.sql  opensuse-redirector.sql  schema-postgresql.sql
sql/migrations/: 0002-schema-postgresql-move-to-mapping-table.sql  0003-schema-postgresql-migrate-to-mapping-table.sql  schema-postgresql-add-filearr_split_path_trigger.sql  schema-postgresql-migrate-data-to-mirrors.sql  schema-postgresql-move-to-mirrors.sql  schema-postgresql-upgrade-2.6-2.7.sql
t/: test_docker.sh  test_environs.sh
t/docker/: 01-smoke.sh  02-location-setenv.sh  02-location.sh  03-mb-test.sh  04-mirrorprobe.sh
tags/2.10.0/: TODO
tags/2.16.0/: TODO
tags/2.8/: ABOUT  TODO
tags/2.8.1/: THANKS  TODO
tags/2.9.0/: NEWS
test/: rsync_list  torture.pl
tools/: Makefile  README  bdecode  create_timestamp  geoip-lite-update  geoiplookup_city.c  geoiplookup_continent.c  meson.build  metalink-hasher.py  mirrorbrain-ci-asn.pl  mirrorbrain-ci-city.pl  mirrorprobe-logrotate  null-rsync  null-rsync.1  null-rsync.1.html  null-rsync.1.ronn  push2mirrors  rsyncinfo  rsyncinfo.py  rsyncusers  rsyncusers.sh  scanner.pl  set_mirror_score  vacuum
trunk/: ABOUT  BUGS  INSTALL  INSTALL.gentoo  NEWS  THANKS  TODO
trunk/config/: config.pl  global.ini  mirrors.africa.ini  mirrors.americas.ini
trunk/doc/: opensuse-redirector-stats.sql  opensuse-redirector.sql  opensuse-redirector_idx.sql
trunk/docs/: bugs.rst  changes.rst  conf.py  configuration.rst  configuration_reference.rst  faq.rst  index.rst  intro.rst  known_problems.rst  mirrors.rst  platforms.rst  tuning.rst  upgrading.rst  usecases.rst
trunk/mb/: mb.py  setup.py  zsyncmodule.c
trunk/mirrordoctor/: mirrordoctor.py  (+1 more)
(+291 files in other folders)
