option('memcached', type : 'boolean', value : true,
       description: 'Build mod_mirrorbrain with memcached support')

option('install-icons', type : 'boolean', value : true,
       description: 'Install FamFam icons (to datadir)')

option('tools', type : 'boolean', value : true,
       description: 'Install additional tools from the tools directory')
